# django-aws-model

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
aws/: admin.py  apps.py  models.py  urls.py  views.py
aws/migrations/: 0001_initial.py  0002_responseconfiguration.py  0003_alter_configuration_closure.py  0004_packagename_defaultconfigurationpackage_and_more.py  0005_alter_defaultconfigurationpackage_configuration_and_more.py  0006_remove_responseconfiguration_variable_type.py  0007_delete_responseconfiguration.py  0008_closure_variable_name.py
aws/templates/: form.html
aws/templates/aws/: default-configuration.js
