[build-system]
requires = ["setuptools>=80.9.0", "Django>=5.2.6", "boto3>=1.37.5"]
build-backend = "setuptools.build_meta"

[project]
name = "django-aws-model"
version = "1.0.0"
authors = [
  { name="Yoshio Mori", email="yoshiomori90@gmail.com" },
]
description = "A app that helps you model and set up your AWS resources."
readme = "README.md"
requires-python = ">=3.13.5"
keywords = ["aws", "model", "set up"]
license = "MIT"
license-file = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3",
    "Django"
]

[project.urls]
Homepage = "https://github.com/yoshiomori/django-aws-model"
Issues = "https://github.com/yoshiomori/django-aws-model/issues"