[project]
name = "django-aws-model"
version = "1.1.0"
authors = [
  { name="Yoshio Mori", email="yoshiomori90@gmail.com" },
]
description = "A app that helps you model and set up your AWS resources."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["aws", "model", "set up"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.37",
    "Django>=5.2"
]
license = { file="LICENSE"}

[project.urls]
Homepage = "https://github.com/yoshiomori/django-aws-model"
Issues = "https://github.com/yoshiomori/django-aws-model/issues"